tests/paczka1/fuzzy1/11363166.err
Error in line 2: TisYR A126 14,75
Error in line 8: ekM A278 D2,8
Error in line 3: vYoFbjT A126 62,2
Error in line 14: TisYR A278 96,7
Error in line 23: TisYR A126 92,4
Error in line 1: ekM A126 89,1
Error in line 29: IEZbUohiyD9 A126 303,23
Error in line 26: ekM A892 54,9
Error in line 25: TisYR A278 38,0
Error in line 27: IEZbUohiyD9 A126 65,5
